--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "expo": "^42.0.4",
         "expo-status-bar": "~1.0.4",
+        "metro-config": "^0.66.2",
         "react": "16.13.1",
         "react-dom": "^16.13.1",
         "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
