Added GPS functionality to the full integration.

--- a/app/app.json
+++ b/app/app.json
@@ -27,6 +27,7 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "description": "https://github.tamu.edu/jdubo1998/AquaVision"
   }
 }
